# Servidor_Backend_De_Informacion-_climatologica

./: README.md
servidor_clima/: .env  Cargo.toml
servidor_clima/migrations/2023-02-17-200016_crear_estaciones/: down.sql  up.sql
servidor_clima/migrations/2023-02-17-200202_crear_informes/: down.sql  up.sql
servidor_clima/src/: lib.rs  main.rs  models.rs  mostrar_estaciones.rs  mostrar_informes.rs  obtener_estacion.rs  obtener_informes.rs  schema.rs
