[package]
name = "servidor_clima"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="2.0.0", features=["mysql","chrono"]}
dotenvy = "0.15"
time = "0.3.19"
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.67"